...
            label = { Text("Медіатека") },
            colors = NavigationBarItemDefaults.colors(
                selectedIconColor = MaterialTheme.colorScheme.primary,
                selectedTextColor = MaterialTheme.colorScheme.primary,
                indicatorColor = MaterialTheme.colorScheme.outlineVariant
            ),
            modifier = Modifier.testTag("tab_library")
        )
    }
}

